- cleanup some code - fix some tests
#349