@@ -19,3 +19,8 @@ shadowJar {
     archiveClassifier.set('')
     minimize()
 }
+
+test {
+    useJUnitPlatform()
+    jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED'] //todo remove me
+}
